--- a/app/assets/stylesheets/opportunities.scss
+++ b/app/assets/stylesheets/opportunities.scss
@@ -116,6 +116,7 @@
   }
 }
 
+
 .requirement-row-complete {
 	border: 2px solid $darkgrey;
 	background-color: $limegreen-low;
@@ -126,12 +127,47 @@
 	}
 }
 
+
+.requirement-row-overdue {
+  border: 2px solid $darkgrey;
+  background-color: $lightpink-low;
+}
+
 .requirement-row-title {
-	font-size: 2.3em;
+	font-size: 2.3rem;
   padding-left: 1vw;
+  display: grid;
+  grid-template-columns: 70% 30%;
+
 
   @include respond-to(handhelds) {
-    font-size: 1.8em;
+    font-size: 1.8rem;
+    grid-template-columns: 100%;
+  }
+}
+
+.req-row-title-span {
+  grid-column: 1;
+  grid-row: 1;
+
+  @include respond-to(handhelds) {
+    text-align: center;
+  }
+}
+
+.req-row-status-span {
+  grid-column: 2;
+  text-transform: uppercase;
+  padding-left: 2px;
+  font-size: 1.8rem;
+
+  @include respond-to(handhelds) {
+    border-left: 0;
+    text-align: right;
+    font-size: 1.3rem;
+    grid-row: 2;
+    grid-column: 1;
+    text-align: left;
   }
 }
 
