--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -42,6 +42,31 @@ h1 {
   }
 }
 
+.registration-button {
+	font-size: 2rem;
+	background-color: $lightpink-low;
+	padding: 1px 7px 2px;
+	border: 1px solid $midgrey;
+	color: $darkgrey;
+	text-transform: none;
+}
+
+.sign-in-button {
+	font-size: 2rem;
+	background-color: $limegreen-low;
+	color: $darkgrey;
+	border: 1px solid $midgrey !important;
+	text-transform: none;
+
+	& a {
+		text-transform: none;
+	}
+}
+
+.register-link {
+	text-transform: none;
+}
+
 .jbh-standard-title {
   font-size: 2.8em;
   padding-left: 5vw;
