--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,7 +8,7 @@
       <div class="col-md-8 mt-md-0 mt-3">
         <!-- Content -->
         <h5 class="text-uppercase">Just Be Human</h5>
-        <p>Just Be Human is run by a 501(c)3 non-profit and is principally donation-funded. As part of our commitment to transparency, we will publish our operating costs in as close to real-time as we can.</p>
+        <p>Just Be Human is run by a 501(c)3 non-profit and is principally donation-funded. If you're interested in helping us grow, please check out these links!</p>
       </div>
       <!-- Grid column -->
       <hr class="clearfix w-100 d-md-none pb-3">
@@ -17,9 +17,6 @@
         <!-- Links -->
         <h5 class="text-uppercase">More Info</h5>
         <ul class="list-unstyled">
-          <li>
-            <a class="footer-link" href="/costs">View Month-to-date Costs</a>
-          </li>
           <li>
             <a class="footer-link" href="/donate">Donation and Help Info</a>
           </li>
