--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -51,6 +51,22 @@ h1 {
 	text-transform: none;
 }
 
+.submit-registration-container {
+	text-align: center;
+}
+.submit-registration-button {
+	font-size: 2rem;
+	background-color: $limegreen-low;
+	padding: 1px 7px 2px;
+	border: 1px solid $midgrey;
+	color: $darkgrey;
+	text-transform: none;
+	width: 50vw;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 3vh;
+}
+
 .sign-in-button {
 	font-size: 2rem;
 	background-color: $limegreen-low;
