--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,4 +1,5 @@
+<%= image_tag("beta-logo.png", class: "navbar-logo", id: "home-step1") %>
 <div class="jbh-standard-title">Welcome to Just Be Human!</div>
-<p>We really appreciate having you along for the ride, <%= @username %>!
+<p>We really appreciate having you along for the ride!
   You can confirm your account email through the link below:</p>
 <p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
