--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -7,6 +7,7 @@
     </style>
   </head>
   <body>
+    <%= image_tag("beta-logo.png", class: "navbar-logo", id: "home-step1") %>
     <%= yield %>
   </body>
 </html>
