oppo form better fucking work in production

--- a/app/assets/stylesheets/opportunities.scss
+++ b/app/assets/stylesheets/opportunities.scss
@@ -746,6 +746,12 @@
   }
 }
 
+#opportunity_target_completion_date_4i {
+  display: none;
+}
+#opportunity_target_completion_date_5i {
+  display: none;
+}
 
 .oppo-edit-back-btn {
   text-align: center;
