--- a/app/views/opportunities/_creationform.html.erb
+++ b/app/views/opportunities/_creationform.html.erb
@@ -54,10 +54,7 @@
       PART OF STEP 2
       -->
       <div class="defined-options-form-container" id="defined-options">
-        <div class="defined-options-explanation oppo-form-explanation">How many people do you need?</div>
-        <div class="volunteers-required-input">
-          <%= f.input :volunteers_required %>
-        </div>
+        <div class="defined-options-explanation oppo-form-explanation">There isn't much setup for defined Opportunities- you will be able to define what you need by adding Requirements once you finish the creation process.</div>
         <div class="oppo-next-btn-container">
           <label onclick="showStepThree(true)" class="oppo-form-next-btn oppo-form-direction-btn">NEXT</label>
         </div>
@@ -73,13 +70,10 @@
     -->
       <div class="abstract-options-form-container" id="abstract-options" >
         <div class="difficulty-container">
-          <div class="abstract-options-explanation oppo-form-explanation">How difficult will it be and how much help do you need?</div>
+          <div class="abstract-options-explanation oppo-form-explanation">Rate the difficulty and decide when you want it defined by.</div>
           <div class="difficulty-selection">
             <%= f.label "How difficult do you expect the solution to be? (1 is easiest, 10 is hardest)" %>
             <%= f.select :estimated_work, [1,2,3,4,5,6,7,8,9,10] %>
-          </div>
-          <div class="volunteers-required-input">
-            <%= f.input :volunteers_required %>
           </div>
           <div class="plan-by-selection">
             <%= f.label "This is the target date for planning the Opportunity." %>
@@ -99,79 +93,16 @@
       STEP 3
     -->
       <div class="location-form-container" id="oppo-creation-step-3">
-        <div class="oppo-form-explanation">When and where?</div>
-        <%= f.datetime_local_field :target_completion_date , :value => DateTime.now %>
-        <!--         <div class="completion-date-selection">
-          <div class="form-group date optional opportunity_target_completion_date"><label class="form-control-label date optional" for="opportunity_target_completion_date_2i">Target completion date</label>
-            <div class="d-flex flex-row justify-content-between align-items-center">
-              <select id="opportunity_target_completion_date_2i" name="opportunity[target_completion_date(2i)]" class="form-control mx-1 date optional">
-                <option value="1">January</option>
-                <option value="2">February</option>
-                <option value="3">March</option>
-                <option value="4">April</option>
-                <option value="5">May</option>
-                <option value="6">June</option>
-                <option value="7">July</option>
-                <option value="8">August</option>
-                <option value="9">September</option>
-                <option value="10">October</option>
-                <option value="11">November</option>
-                <option value="12">December</option>
-              </select>
-              <select id="opportunity_target_completion_date_3i" name="opportunity[target_completion_date(3i)]" class="form-control mx-1 date optional">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-                <option value="11">11</option>
-                <option value="12">12</option>
-                <option value="13">13</option>
-                <option value="14">14</option>
-                <option value="15">15</option>
-                <option value="16">16</option>
-                <option value="17">17</option>
-                <option value="18">18</option>
-                <option value="19">19</option>
-                <option value="20">20</option>
-                <option value="21">21</option>
-                <option value="22">22</option>
-                <option value="23">23</option>
-                <option value="24">24</option>
-                <option value="25">25</option>
-                <option value="26">26</option>
-                <option value="27">27</option>
-                <option value="28">28</option>
-                <option value="29">29</option>
-                <option value="30">30</option>
-                <option value="31">31</option>
-              </select>
-              <select id="opportunity_target_completion_date_1i" name="opportunity[target_completion_date(1i)]" class="form-control mx-1 date optional">
-                <option value="2019">2019</option>
-                <option value="2020">2020</option>
-                <option value="2021">2021</option>
-                <option value="2022">2022</option>
-                <option value="2023">2023</option>
-                <option value="2024">2024</option>
-              </select>
-              <input id="opportunity_target_completion_date_4i" name="opportunity[target_completion_date(4i)]" class="form-control mx-1 date optional" value="00">
-              <input id="opportunity_target_completion_date_5i" name="opportunity[target_completion_date(5i)]" class="form-control mx-1 date optional" value="00">
-            </div>
-          </div>
-        </div> -->
-        <div class="oppo-datetime-selection">
-          <label><input type="checkbox" name="datetime-or-date" checked value="" id="datetime-required" onclick="showOrHideTimeOptions()">Toggle time of day options</label>
-        </div>
+        <div class="oppo-form-explanation">When, where, and how many people do you need?</div>
+        <%= f.input :target_completion_date, order: [:month, :day, :year], datetime_separator: '', time_separator: '' %>
         <div class="location-selection">
           <%= f.input :address, placeholder: "ex. 'City Park, Denver, CO'" %>
         </div>
         <div class="location-disclaimer">
           If possible, please enter a specific location; an address, intersection, or public place is perfect!
+        </div>
+        <div class="volunteers-required-input">
+          <%= f.input :volunteers_required %>
         </div>
         <div class="submit-post-container">
           <%= f.button :submit, "Create", class: 'submit-post-btn'%>
