make sure newlines in descriptions, comments, etc all show up

--- a/app/assets/stylesheets/opportunities.scss
+++ b/app/assets/stylesheets/opportunities.scss
@@ -746,6 +746,10 @@
   }
 }
 
+.opportunity-description {
+  white-space: pre-line;
+}
+
 #opportunity_target_completion_date_4i {
   display: none;
 }
