fix little bug on req show page

--- a/app/views/requirements/show.html.erb
+++ b/app/views/requirements/show.html.erb
@@ -27,7 +27,7 @@
                 <%= @requirement.volunteer_count %> / <%= @requirement.volunteers_required %>
               </div>
             </div>
-            <% if @is_follower %>
+            <% if @is_volunteer %>
               <div class="dropdown">
                 <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   OPTIONS
