clean up buttons and some other shit

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -54,6 +54,11 @@
   text-transform: uppercase !important;
   color: $darkgrey;
 
+  &:hover {
+    text-decoration: none;
+    color: $darkgrey;
+  }
+
   @include respond-to(handhelds) {
     font-size: 1.6rem !important;
   }
