--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -19,7 +19,7 @@
   <div class="landing-page-continue-btn">
     <div class="submit-post-container">
       <a class="submit-post-btn" href="/users/sign_in" role="button">
-        <div class="jbh-btn-text">Let's start volunteering!</div>
+        Let's start volunteering!
       </a>
     </div>
   </div>
