--- a/app/views/pages/_opportunity_row.html.erb
+++ b/app/views/pages/_opportunity_row.html.erb
@@ -28,7 +28,7 @@
       </h5>
       <div class="opportunity-meta">
         <div class="opportunity-row-data">
-          <div class="opportunity-row-data-header">Completion Date: </div>
+          <div class="opportunity-row-data-header"><%= opportunity.defined? ? 'Completion Date:' : 'Plan by date:' %> </div>
           <% if opportunity.overdue? %>
             <div class="opportunity-row-data-content opportunity-row-overdue">
               <%= opportunity.display_date %> - behind schedule!
