--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -94,7 +94,7 @@
         position: LatLng,
         map: map,
         animation: google.maps.Animation.DROP,
-        icon: "http://maps.google.com/mapfiles/ms/icons/green.png"
+        icon: {url: "http://maps.google.com/mapfiles/ms/icons/green.png", scaledSize: new google.maps.Size(42,42)}
       });
   
   
@@ -109,8 +109,14 @@
       //marker.addListener('click', assignListener(marker, infoWindow));
     }
   
-    let blueIcon = "http://maps.google.com/mapfiles/ms/icons/blue.png";
-    let redIcon = "http://maps.google.com/mapfiles/ms/icons/red.png"
+    let blueIcon = {
+      url: "http://maps.google.com/mapfiles/ms/icons/blue.png",
+      size: new google.maps.Size(42,42)
+    };
+    let redIcon = {
+      url: "http://maps.google.com/mapfiles/ms/icons/red.png",
+      scaledSize: new google.maps.Size(42,42)
+    };
     for (let i = 0, length = myOppos.length; i < length; i++)
     {
       let data = myOppos[i],
