--- a/app/views/opportunities/show.html.erb
+++ b/app/views/opportunities/show.html.erb
@@ -53,7 +53,7 @@
               </div>
             <% else %>
               <a class="follow-btn btn" href="/opportunities/follow?id=<%=@opportunity.id%>">
-                JOIN
+                FOLLOW
               </a>
             <% end %>
           </div>
