--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -84,7 +84,7 @@
         `<div id="marker-content">
           <div id="siteNotice"></div>
           <h4 id="marker-title" class="marker-title"> ${data.title}</h4>
-          <p id="marker-participants" class="marker-participants">Participant status: ${data.volunteer_count} / ${data.volunteers_required}</p>
+          <p id="marker-participants" class="marker-participants">Volunteer count: ${data.volunteer_count} / ${data.volunteers_required}</p>
           <p id="marker-followers" class="marker-followers">Followers: ${data.follower_count}</p>
           <p id="marker-category" class="marker_category">Category: ${data.category_title}</p>
           <a href="/opportunities/${data.id}" id="marker-link" class="marker-link">See Opportunity Details</a>
