alrighty, the migration is in place

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,7 +33,7 @@
     <div class="homepage-header" id="home-step4">
       <div class="tab hp">
         <button class="tablinks hp" onclick="openTab(event, 'opps-near-me')" id="defaultOpen">Open</button>
-        <button class="tablinks hp" onclick="openTab(event, 'my-opps')">Active</button>
+        <button class="tablinks hp" onclick="openTab(event, 'my-opps')">Participating</button>
       </div>
     </div>
     <div id="opps-near-me" class="tabcontent hp">
