--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -5,7 +5,7 @@
   min-height: 10vh;
 
   font-family: 'Montserrat', sans-serif;
-  
+
   border-bottom: 1px solid $midgrey;
 }
 
@@ -28,7 +28,7 @@
 }
 
 .desktop-nav {
-  
+
 }
 .navbar-nav {
   margin-left: auto;
@@ -61,6 +61,11 @@
   color: $darkgrey !important;
   text-transform: uppercase;
   font-size: 1.2rem;
+}
+
+.nav-donate-link {
+  color: $limegreen !important;
+  font-weight: 600;
 }
 
 .btn-outline-dark {
