--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,6 +7,9 @@
   </button>
   <div class="desktop-nav" >
     <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link nav-donate-link" href="/donate">Donate</a>
+      </li>
       <% if current_user %>
         <li class="nav-item" id="home-step2">
           <%= link_to 'New Opportunity', new_opportunity_path, class: 'nav-link' %>
@@ -41,6 +44,9 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <div class="mobile-nav">
       <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link nav-donate-link" href="/donate">Donate</a>
+        </li>
         <% if current_user %>
           <li class="nav-item">
             <%= link_to 'New Opportunity', new_opportunity_path, class: 'nav-link' %>
