notifications work mothafuckaaaaa

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -4,6 +4,7 @@
 @import "/*";
 @import "bootstrap";
 @import "tether";
+@import "font-awesome";
 @import url('https://fonts.googleapis.com/css?family=Fjalla+One&display=swap');
 $enable-responsive-font-sizes: true;
 
